--- a/project/.env.example
+++ b/project/.env.example
@@ -13,7 +13,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PASSWORD=homestead
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
